--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,40 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
 
-    //lotie cho phép add After Effect animation
+    //lottie cho phép add After Effect animation
     implementation 'com.airbnb.android:lottie:5.2.0'
+
+    //gson
+    implementation 'com.google.android.material:material:1.9.0-rc01'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
+    //thu viện load image glider
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+    //thu viện load dữ liệu API
+    implementation 'com.android.volley:volley:1.2.1'
+    //thư viện circle images
+    //bo goc tron cho ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    def lifecycle_version = "2.5.1"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+
+    // Saved state module for ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+
+    // Annotation processor
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
 }
