--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,9 @@ dependencies {
     // alternately - if using Java8, use the following instead of lifecycle-compiler
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
+    // paper database
+    implementation 'io.github.pilgr:paperdb:2.7.2'
+// coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
 }
