--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".SendOTP"
+            android:exported="false"
+            android:label="@string/title_activity_send_otp" />
+        <activity
             android:name=".activities.OrderActivity"
             android:exported="false" />
         <activity
